--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div>
 				<h1>Menu</h1>
 				<h4>Greek Platter</h4>
-				<p>Grilled chicken(pork/lamb), pita bread, tzatziki, tomatoes & cucumber, french fries $15</p>
+				<p>Grilled chicken, pita bread, tzatziki, tomatoes & cucumber, french fries $15</p>
 				<h4>Chicken Tikka Masala</h4>
 				<p>Roasted marinated chicken chunks in a creamy tomato sauce $13</p>
 				<h4>Thanksgiving Special</h4>
@@ -53,8 +53,16 @@
 		</div>
 	<!-- Contact container goes here -->
 		<div>
-			<div>Description text</div>
-			<div>Form can go here</div>
+			<h1>Contact us today!</h1>
+			<div>
+				<form action="/action_page.php">
+					<input type="text" name="name" placeholder="Name">
+					<input type="email" name="email" placeholder="Email">
+					<input type="tel" name="tel" placeholder="Telephone Number">
+					<input type="text" name="message" placeholder="Message">
+					<button type="submit">Submit</button>
+				</form>
+			</div>
 		</div>
 		<!-- Page end content container	 -->
 	</div>
