--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 </head>
 <body>
 	<!-- Navbar container goes here -->
-	<div>
-		<div>
-			<a href="#home">Chicken Club</a>
-			<div>
-				<a href="#about">About</a>
-				<a href="#menu">Menu</a>
-				<a href="#contact">Contact</a>
-			</div>
-		</div>
-	</div>
+	<nav>
+		<a href="#home">Chicken Club</a>
+		<ul>
+			<li><a href="#about">About</a></li>
+			<li><a href="#menu">Menu</a></li>
+			<li><a href="#contact">Contact</a></li>	
+		</ul>
+	</nav>
 
 	<!-- Header container goes here -->
 	<header>
@@ -29,6 +27,16 @@
 
 	<!-- Page start content container-->
 	<div>
+	<!-- About container goes here -->
+		<div>
+			<div>
+				Image can go here
+			</div>
+			<div>
+				<p>We are a restaurant that specializes in making great chicken dishes!</p>
+				<p>We were founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only use <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+			</div>
+		</div>
 	<!-- Menu container goes here -->
 		<div class="menu">
 			<div>
@@ -41,15 +49,6 @@
 				<p>Stewed chicken, mac & cheese, cornbread and a side vegetable  $16.50</p>
 			</div>
 			<div>Image of food can go here</div>
-		</div>
-	<!-- About container goes here -->
-		<div>
-			<div>
-				Image can go here
-			</div>
-			<div>
-				<p>We are a restaurant that specializes in making great chicken dishes!</p>
-			</div>
 		</div>
 	<!-- Contact container goes here -->
 		<div>
