--- a/index.html
+++ b/index.html
@@ -26,19 +26,17 @@
 	</header>
 
 	<!-- Page start content container-->
-	<div>
+	<main>
 	<!-- About container goes here -->
-		<div>
-			<div>
-				Image can go here
-			</div>
+		<section>
+			<h1>About</h1>
 			<div>
 				<p>We are a restaurant that specializes in making great chicken dishes!</p>
 				<p>We were founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only use <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
 			</div>
-		</div>
+		</section>
 	<!-- Menu container goes here -->
-		<div class="menu">
+		<section>
 			<div>
 				<h1>Menu</h1>
 				<h4>Greek Platter</h4>
@@ -49,9 +47,9 @@
 				<p>Stewed chicken, mac & cheese, cornbread and a side vegetable  $16.50</p>
 			</div>
 			<div>Image of food can go here</div>
-		</div>
+		</section>
 	<!-- Contact container goes here -->
-		<div>
+		<section>
 			<h1>Contact us today!</h1>
 			<div>
 				<form action="/action_page.php">
@@ -62,9 +60,9 @@
 					<button type="submit">Submit</button>
 				</form>
 			</div>
-		</div>
+		</section>
 		<!-- Page end content container	 -->
-	</div>
+	</main>
 	<!-- Footer container goes here -->	
 	<footer>
 		<p>Powered by <a href="#">ktsalt</a></p>
