li reverse order fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- Navbar container goes here -->
 	<nav>
-		<a href="#home">Chicken Club</a>
+		<strong><i><a href="#home" id="logo">Chicken Club</a></i></strong>
 		<ul>
 			<li><a href="#about">About</a></li>
 			<li><a href="#menu">Menu</a></li>
@@ -19,7 +19,7 @@
 
 	<!-- Header container goes here -->
 	<header>
-		<!-- <img src="images/steak.jpg"> -->
+		<img src="images/greekChicken.jpg" id="greekChicken">
 		<div>
 			<h1>Chicken Club</h1>
 		</div>
