changed layout spacing

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 	<!-- Header container goes here -->
 	<header>
 		<img src="images/greekChicken.jpg" id="greekChicken">
-		<div>
-			<h1>Chicken Club</h1>
-		</div>
 	</header>
 
 	<!-- Page start content container-->
 	<main>
 	<!-- About container goes here -->
 		<section>
-			<h1>About</h1>
+			<h1>About Chicken Club</h1>
 			<div>
+				<img src="images/grapefruitDrink.jpg" id="grapefruitDrink" alt="grapefruitDrink">
 				<p>We are a restaurant that specializes in making great chicken dishes!</p>
-				<p>We were founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only use <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+				<p>We were founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only use seasonal ingredients.</p>
+				<p>Mauris in aliquam sem fringilla. Massa placerat duis ultricies lacus. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Amet risus nullam eget felis eget nunc lobortis mattis aliquam. A diam maecenas sed enim. Id aliquet risus feugiat in ante metus. Urna neque viverra justo nec ultrices dui sapien eget. Vitae et leo duis ut diam quam nulla porttitor massa. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Arcu vitae elementum curabitur vitae nunc. Sodales ut etiam sit amet nisl. Odio morbi quis commodo odio aenean sed adipiscing diam donec. Tempor orci dapibus ultrices in iaculis. Ut faucibus pulvinar elementum integer enim neque volutpat ac tincidunt. Nunc sed velit dignissim sodales ut eu sem. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Parturient montes nascetur ridiculus mus mauris vitae ultricies leo. In massa tempor nec feugiat nisl. Vulputate sapien nec sagittis aliquam malesuada.</p>
 			</div>
 		</section>
 	<!-- Menu container goes here -->
 		<section>
 			<div>
+				<img src="images/turkeyDay.jpg" id="turkeydaySpecial" alt="turkeydayspecial">
 				<h1>Menu</h1>
 				<h4>Greek Platter</h4>
 				<p>Grilled chicken, pita bread, tzatziki, tomatoes & cucumber, french fries $15</p>
@@ -52,6 +52,7 @@
 		<section>
 			<h1>Contact us today!</h1>
 			<div>
+				<hr>
 				<form action="/action_page.php">
 					<input type="text" name="name" placeholder="Name">
 					<input type="email" name="email" placeholder="Email">
