--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				<p>Mauris in aliquam sem fringilla. Massa placerat duis ultricies lacus. Non pulvinar neque laoreet suspendisse interdum consectetur libero id. Amet risus nullam eget felis eget nunc lobortis mattis aliquam. A diam maecenas sed enim. Id aliquet risus feugiat in ante metus. Urna neque viverra justo nec ultrices dui sapien eget. Vitae et leo duis ut diam quam nulla porttitor massa. Elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Arcu vitae elementum curabitur vitae nunc. Sodales ut etiam sit amet nisl. Odio morbi quis commodo odio aenean sed adipiscing diam donec. Tempor orci dapibus ultrices in iaculis. Ut faucibus pulvinar elementum integer enim neque volutpat ac tincidunt. Nunc sed velit dignissim sodales ut eu sem. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Parturient montes nascetur ridiculus mus mauris vitae ultricies leo. In massa tempor nec feugiat nisl. Vulputate sapien nec sagittis aliquam malesuada.</p>
 			</div>
 		</section>
+		<hr>
 	<!-- Menu container goes here -->
 		<section>
 			<div>
@@ -45,9 +46,15 @@
 				<p>Roasted marinated chicken chunks in a creamy tomato sauce $13</p>
 				<h4>Thanksgiving Special</h4>
 				<p>Stewed chicken, mac & cheese, cornbread and a side vegetable  $16.50</p>
+				<h4>Egg Rolls</h4>
+				<p>Fried, savory rolls, with cabbage, chopped Chinese roast pork, and shrimp</p>
+				<h4>Mac Cheese</h4>
+				<p>Rich and creamy macaroni pasta mixed with a cheesy sauce</p>
+				<h4>Baby Broccoli</h4>
+				<p>Tender texture and offers a mild, sweet flavor with subtle bitter notes</p>
 			</div>
-			<div>Image of food can go here</div>
 		</section>
+		<hr>
 	<!-- Contact container goes here -->
 		<section>
 			<h1>Contact us today!</h1>
