link to element

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!-- Page start content container-->
 	<main>
 	<!-- About container goes here -->
-		<section>
+		<section id="about">
 			<h1>About Chicken Club</h1>
 			<div>
 				<img src="images/grapefruitDrink.jpg" id="grapefruitDrink" alt="grapefruitDrink">
@@ -36,7 +36,7 @@
 		</section>
 		<hr>
 	<!-- Menu container goes here -->
-		<section>
+		<section id="menu">
 			<div>
 				<img src="images/turkeyDay.jpg" id="turkeydaySpecial" alt="turkeydayspecial">
 				<h1>Menu</h1>
@@ -56,7 +56,7 @@
 		</section>
 		<hr>
 	<!-- Contact container goes here -->
-		<section>
+		<section id="contact">
 			<h1>Contact us today!</h1>
 			<div>
 				<hr>
